@@ -1,14 +1,15 @@
 package pages;
 
 import static com.microsoft.playwright.options.WaitForSelectorState.VISIBLE;
-import static core.ConfigProvider.URL_999;
 
-import com.microsoft.playwright.FileChooser;
+import com.microsoft.playwright.ElementHandle;
 import com.microsoft.playwright.Page;
 import core.ActionsHelper;
 import core.BaseTest;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 
 public class AddAdPage extends BaseTest {
 
@@ -19,19 +20,39 @@ public class AddAdPage extends BaseTest {
     this.page = page;
   }
 
-  private final String textCarToAdd = "Skoda Fabia 3 \n"
+  private final String textCarToAddRus = "Skoda Fabia 3 \n"
       + "- 2019 г.в.\n"
       + "- 22.800 км.\n"
       + "- 999cm\n"
-      + "- Автомобиль в отличном состоянии\n"
+      + "- Автомобиль в отличном техническом состоянии\n"
       + "- Практически новый\n"
       + "- Минимальный пробег\n"
       + "- Один владелец";
+
+  private final String textCarToAddRo = "Skoda Fabia 3 \n"
+      + "- Pret listat     = 9.200€.\n"
+      + "- Pret 'ultimul pret' = 8.800€.\n"
+      + "- 2019 a.f.\n"
+      + "- 22.800 km.\n"
+      + "- 999cm\n"
+      + "- Masina e in stare tehnica excelenta\n"
+      + "- Masina este practic noua\n"
+      + "- Parcurs minim\n"
+      + "- Procurata de la Daac Hermes\n"
+      + "\n";
+//      + "Telegram canal: https://t.me/MTS_AutoVentas\n"
+//      + "Instagram:      https://www.instagram.com/p/CthLp1ZootP";
+
+
   private final String tagToAdd = "Skoda, Fabia, Skoda Fabia, Skoda Fabia 3, новая, новый";
-  private final String textSSDToAddTitle = "Новый Kingston NV2 500Gb, PCIe 4.0";
-  private final String textSSDToAdd = "Nou, sigilat, original\n"
-      + "Новый, запечатанный, оригинальный\n"
-      + "Kingston NV2 500Gb, PCIe 4.0, NVMe";
+  private final String textSSDToAddTitle = "Kingston NV2 500Gb PCIe 4.0 — 2шт по 620/шт или 1 шт по 670";
+//  private final String textSSDToAdd = "Nou, sigilat, original\n"
+//      + "Новый, запечатанный, оригинальный\n"
+//      + "Kingston NV2 500Gb, PCIe 4.0, NVMe";
+//
+  private final String textSSDToAdd = "Kingston NV2 500Gb, PCIe 4.0, NVMe\n"
+    + "=============================\n"
+    + "Новые, запечатанные, оригинальные";
 
   private final String closePopUp = "[class='header_menu_nav__cart_popup_action']";
   private final String addAdButton = "[id='js-add-ad']";
@@ -77,9 +98,55 @@ public class AddAdPage extends BaseTest {
   private final String selectHeadPhonesSubCategory = "[href*='microphones']";
   private final String subType = "[name='752']";
   private final String connectionType = "[name='962']";
+  private final String warningLimit = "[href='https://999.md/info/rules#pages-rule2']";
+  private final String notification = "[class='user-item-btn-chat-unreaded']";
 
-  public void setUp(){
-    if(page.querySelector(closePopUp) != null){
+  public boolean checkWarningLimit() {
+    if (page.querySelector(warningLimit).isVisible()) {
+      return true;
+    }
+    return false;
+  }
+
+
+
+  public void logOut(String login, String password){
+    page.frameLocator("#topbar-panel").locator("[id='user-username-btn']").hover();
+    page.frameLocator("#topbar-panel").locator("button[data-autotest='logout']").click();
+    page.click("[data-autotest='login']");
+    page.fill("[name='login']", login);
+    page.fill("[name='password']", password);
+    page.click("[type='submit']");
+  }
+
+  public int getNumberOhHiddenAdds() {
+    List<ElementHandle> elements = page.querySelectorAll("[data-test-item-type='standard']");
+    int count = 0;
+
+    for (ElementHandle element : elements) {
+      String attributeValue = element.getAttribute("data-test-item-state");
+      if (!attributeValue.equals("public")) {
+        count++;
+      }
+    }
+    return count;
+  }
+
+  public void getNotifications(String user){
+    page.hover("[id='m__user_panel']");
+    page.click("a[href='/cabinet/items']");
+    int numberOfNotifications = Integer.parseInt(page.frameLocator("#topbar-panel").locator(notification).innerText());
+//    System.out.println(numberOfNotifications != 0
+//        ? "There are " + numberOfNotifications + " notifications for the user:       " + user
+//        : "There are no notifications for the:           " + user);
+    System.out.println("--->" + user);
+    System.out.println("Notifications = " + numberOfNotifications);
+    System.out.println("Hidden adds= " + getNumberOhHiddenAdds());
+    System.out.println("========================");
+  }
+
+  public void setUp() {
+    if (page.querySelector(closePopUp) != null) {
       page.click(closePopUp);
 
     }
@@ -87,12 +154,13 @@ public class AddAdPage extends BaseTest {
 
   }
 
-  public void logitech(){
+  public void logitech() {
     setUp();
     page.click(selectPcCategory);
     page.click(selectMiceCategory);
     page.fill(title, "Logitech - Оригинальный чехол для компьютерной мыши");
     page.fill(price, "50");
+    page.selectOption(type, "20823");
     page.selectOption(manufacturer, "24705");
     page.setInputFiles(uploadPictureButton, new Path[]{
         Paths.get("G:\\My Drive\\999\\Logitech\\pic1.jpg"),
@@ -109,8 +177,7 @@ public class AddAdPage extends BaseTest {
   }
 
 
-
-  public void orico(){
+  public void orico() {
     setUp();
     page.click(selectPcCategory);
     page.click(selectSSDSubCategory);
@@ -139,7 +206,8 @@ public class AddAdPage extends BaseTest {
     page.click(submitButton);
 
   }
-  public void q35(){
+
+  public void q35() {
     setUp();
     page.click(selectAudioCategory);
     page.click(selectHeadPhonesSubCategory);
@@ -150,7 +218,7 @@ public class AddAdPage extends BaseTest {
         + "\n"
         + "Граждане МОШЕННИКИ - Почтой и курьером не отправляю.");
     page.fill(tagTextForm, "SoundCore, Q35, Anker");
-    page.fill(price, "2200");
+    page.fill(price, "2100");
     page.selectOption(manufacturer, "26189");
     page.selectOption(type, "19644");
     page.selectOption(subType, "19650");
@@ -168,19 +236,22 @@ public class AddAdPage extends BaseTest {
     page.click(submitButton);
   }
 
-  public void addSDD(){
+  public void addSDD() {
     setUp();
     page.click(selectPcCategory);
     page.click(selectSSDSubCategory);
     page.fill(title, textSSDToAddTitle);
     page.fill(adTextForm, textSSDToAdd);
-    page.fill(price, "670");
+    page.fill(price, "620");
     page.selectOption(type, "20734");
     page.selectOption(manufacturer, "24698");
     page.selectOption(formFactor, "26803");
     page.fill(size, "500");
     page.selectOption(ssdInterface, "22140");
-    page.setInputFiles(uploadPictureButton, Path.of("G:\\My Drive\\999\\SSD\\IMG20230407102433.jpg"));
+    page.setInputFiles(uploadPictureButton, new Path[]{
+        Paths.get("G:\\My Drive\\999\\SSD\\New folder\\pic1.jpg"),
+        Paths.get("G:\\My Drive\\999\\SSD\\New folder\\pic2.jpg"),
+        Paths.get("G:\\My Drive\\999\\SSD\\New folder\\pic3.jpg")});
     page.waitForSelector(removeButton, new Page.WaitForSelectorOptions().setState(VISIBLE));
     try {
       Thread.sleep(5000);
@@ -196,38 +267,48 @@ public class AddAdPage extends BaseTest {
     setUp();
     page.click(selectTransportCategory);
     page.click(selectCarSubCategory);
-    page.selectOption(make, "143");
-    page.selectOption(model, "170");
-    page.selectOption(registration, "18592");
-    page.selectOption(condition, "18668");
-    page.selectOption(stock, "29670");
-    page.selectOption(market, "29677");
-    page.fill(adTextForm, textCarToAdd);
-    page.fill(tagTextForm, tagToAdd);
-    page.fill(price, "9200");
-    page.selectOption(addAuthor, "18895");
-    page.fill(yearOfManufacture, "2019");
-    page.selectOption(steeringWheel, "21979");
-    page.selectOption(numberSeats, "19119");
-    page.selectOption(bodyType, "11");
-    page.fill(mileage, "22800");
-    page.fill(engineCapacity, "999");
-    page.fill(enginePower, "75");
-    page.selectOption(fuelType, "10");
-    page.selectOption(transmissionType, "4");
-    page.selectOption(privod, "5");
-    page.selectOption(colour, "19");
-    page.setInputFiles(uploadPictureButton, new Path[]{
-        Paths.get("G:\\My Drive\\999\\Fabia\\pic1.jpg"),
-        Paths.get("G:\\My Drive\\999\\Fabia\\pic2.jpg"),
-        Paths.get("G:\\My Drive\\999\\Fabia\\pic3.jpg"),
-        Paths.get("G:\\My Drive\\999\\Fabia\\pic4.jpg")});
-    try {
-      Thread.sleep(5000);
-    } catch (InterruptedException e) {
-      throw new RuntimeException(e);
-    }
-    page.click(agreeButton);
-    page.click(submitButton);
+//    if (checkWarningLimit() == true) {
+      page.selectOption(make, "143");
+      page.selectOption(model, "170");
+      page.selectOption(registration, "18592");
+      page.selectOption(condition, "18668");
+      page.selectOption(stock, "29670");
+      page.selectOption(market, "29677");
+      page.fill(adTextForm, textCarToAddRo);
+//      page.fill(adTextForm, textCarToAddRus);
+      page.fill(tagTextForm, tagToAdd);
+      page.fill(price, "9200");
+      page.selectOption(addAuthor, "18895");
+      page.fill(yearOfManufacture, "2019");
+      page.selectOption(steeringWheel, "21979");
+      page.selectOption(numberSeats, "19119");
+      page.selectOption(bodyType, "11");
+      page.fill(mileage, "22800");
+      page.fill(engineCapacity, "999");
+      page.fill(enginePower, "75");
+      page.selectOption(fuelType, "10");
+      page.selectOption(transmissionType, "4");
+      page.selectOption(privod, "5");
+      page.selectOption(colour, "19");
+      page.setInputFiles(uploadPictureButton, new Path[]{
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic1.jpg"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic2.jpg"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic3.jpg"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic4.jpg"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic5.jpg"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic6.jpg"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic7.png"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic8.png"),
+          Paths.get("G:\\My Drive\\999\\Fabia\\pic9.jpg")});
+      try {
+        Thread.sleep(10000);
+      } catch (InterruptedException e) {
+        throw new RuntimeException(e);
+      }
+      page.click(agreeButton);
+      page.click(submitButton);
+//    } else {
+//      System.out.println("Вы исчерпали месячный лимит бесплатных объявлений в данной подкатегории");
+//    }
   }
 }
